2019-1/230/users/2352/executions/1576_1326.log
== SUBMITION (2019-03-11 16:35:45) 
-- CODE:
a + b
print(75)
-- EXECUTION TIME:
0.16465
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1576/1326/main.py", line 1, in <module>
    a + b
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 16:36:03) 
-- CODE:
a + b
print("75")
-- EXECUTION TIME:
0.149404
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1576/1326/main.py", line 1, in <module>
    a + b
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 16:37:12) 
-- CODE:
print("a + b")
print("75")
-- EXECUTION TIME:
0.153748
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
a + b
75
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 16:37:13) 
-- CODE:
print("a + b")
print("75")
-- EXECUTION TIME:
0.138328
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
a + b
75
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 16:38:18) 
-- CODE:
print("40+35")
-- EXECUTION TIME:
0.160597
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
40+35
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 16:40:23) 
-- CODE:
print("a+b")
-- EXECUTION TIME:
0.214963
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
a+b
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 16:43:28) 
-- CODE:
c = 40
d = 35

print("75")
-- EXECUTION TIME:
0.123927
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
